--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="img/ico" href="public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Fonts: -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Lato:ital,wght@0,300;0,400;0,700;1,400&family=Lora:wght@400;700&family=Merriweather:ital,wght@0,300;0,400;0,700;1,400&family=Montserrat:ital,wght@0,300;0,400;0,700;1,400&family=Open+Sans:ital,wght@0,400;0,700;1,300;1,400&family=Playfair+Display:wght@400;700&family=Poppins:ital,wght@0,300;0,400;0,700;1,400&family=Roboto:ital,wght@0,400;0,700;0,900;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>CV Builder</title>
   </head>
   <body>
     <div id="root"></div>
